; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_RM_FreeCallReply.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_RM_FreeCallReply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }

@REDISMODULE_AM_REPLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RM_FreeCallReply(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  store i32* %6, i32** %3, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %8 = call i32 @RM_FreeCallReply_Rec(%struct.TYPE_5__* %7, i32 0)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* @REDISMODULE_AM_REPLY, align 4
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %12 = call i32 @autoMemoryFreed(i32* %9, i32 %10, %struct.TYPE_5__* %11)
  ret void
}

declare dso_local i32 @RM_FreeCallReply_Rec(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @autoMemoryFreed(i32*, i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
